@@ -1,3 +1,11 @@
+2004-05-24  Andrew Haley  <aph@redhat.com>
+
+        * expr.c (build_known_method_ref): Make sure ARRAY_REF access to
+        atable element is of the right type.
+
+        * class.c (build_static_field_ref): Cast pointer to correct type
+        for field.
+
 2004-04-20  Bryce McKinlay  <mckinlay@redhat.com>
 
 	* Merged with HEAD as of 20040514. Diff against
